tinyc/test/good/initialize-const.c
int main()
{
    const int x = 0;

    return 0;
}
