tinyc/test/bad/assign-to-function.c
int f( int x ) {}
int main()
{
    f = 0;

    return 0;
}
